Fixed not showing PGP link

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ a.prof,img.prof {
 	width: 64px;
 }
 
-code.pgp {
+code.pgp,.pgp {
 	font-color: #09F;
 
 cite.from-quote {
